4581.	[port]		Linux: Add getpid and getrandom to the list of system
			calls named uses for seccomp. [RT #44883]

4580.	[bug]		4578 introduced a regression when handling CNAME to
			referral below the current domain. [RT #44850]

4579.	[func]		Logging channels and dnstap output files can now
			be configured with a "suffix" option, set to
			either "increment" or "timestamp", indicating
			whether to use incrementing numbers or timestamps
			as the file suffix when rolling over a log file.
			[RT #42838]

4578.	[security]	Some chaining (CNAME or DNAME) responses to upstream
			queries could trigger assertion failures.
			(CVE-2017-3137) [RT #44734]

4577.	[func]		Make qtype of resolver fuzzing packet configurable
			via command line. [RT #43540]

4576.	[func]		The RPZ implementation has been substantially
			refactored for improved performance and reliability.
			[RT #43449]

4575.	[security]	DNS64 with "break-dnssec yes;" can result in an
			assertion failure. (CVE-2017-3136) [RT #44653]

4574.	[bug]		Dig leaked memory with multiple +subnet options.
			[RT #44683]

4573.	[func]		Query logic has been substantially refactored (e.g.
			query_find function has been split into smaller
			functions) for improved readability, maintainability
			and testability. [RT #43929]

4572.	[func]		The "dnstap-output" option can now take "size" and
			"versions" parameters to indicate the maximum size
			a dnstap log file can grow before rolling to a new
			file, and how many old files to retain. [RT #44502]

4571.	[bug]		Out-of-tree builds of backtrace_test failed.

4570.	[cleanup]	named did not correctly fall back to the built-in
			initializing keys if the bind.keys file was present
			but empty. [RT #44531]

4569.	[func]		Store both local and remote addresses in dnstap
			logging, and modify dnstap-read output format to
			print them. [RT #43595]

4568.	[contrib]	Added a --with-bind option to the dnsperf configure
			script to specify BIND prefix path.
